# specs-physics

./: Cargo.toml
specs_physics2d/: Cargo.toml
specs_physics2d/examples/: basic.rs
specs_physics3d/: Cargo.toml
specs_physics3d/examples/: basic.rs  collision.rs  events.rs  hierarchy.rs  positions.rs
src/: bodies.rs  colliders.rs  lib.rs  parameters.rs  types.rs
src/systems/: sync_bodies_from_physics.rs  sync_bodies_to_physics.rs  sync_colliders_to_physics.rs  sync_parameters_to_physics.rs
