[package]
name = "specs-physics2d"
version = "0.3.0"
authors = ["Benjamin Amling <benjamin@amling.net>", "Kel <x@unclear.info>", "jojolepro <jojolepromain@gmail.com>"]
repository = "https://github.com/amethyst/specs-physics.git"
homepage = "https://github.com/amethyst/specs-physics.git"
edition = "2018"

license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/specs-physics"
description = "nphysics integration for the Specs entity component system"

keywords = ["specs", "nphysics", "nphysics3d"]

[lib]
name = "specs_physics2d"
path = "../src/lib.rs"

[features]
default = []

amethyst = ["amethyst_core"]

[dependencies]
log = "0.4.6"
specs = "0.14.3"
specs-hierarchy = "0.3.1"
shrev = "1.1.1"
nalgebra = "0.18.0"
ncollide2d = "0.19"
nphysics2d = "0.11.1"
amethyst_core = { version = "0.6.0", optional = true }
objekt = "0.1.2"

[dev-dependencies]
simple_logger = "1.2.0"

